feat: Improve mobile experience and PWA capabilities
Enhance the application's user experience on mobile devices by implementing PWA features and optimizing for mobile browsers. This includes:

- Adding a `manifest.json` file for PWA capabilities.
- Configuring viewport settings in `index.html` for better scaling and touch interaction.
- Implementing meta tags for web app capabilities and theme color.
- Disabling pull-to-refresh and overscroll glow behavior.
- Removing tap highlight on mobile elements.
- Updating the browser tab title to "Elite Hangman".

The AI challenge generation functionality has been removed from the main `App.tsx` component to simplify its role and potentially streamline future architectural changes.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Hangman Elite</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#0f172a">
+    <link rel="manifest" href="manifest.json">
+    <title>Elite Hangman</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -12,9 +16,15 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             color: #f8fafc;
+            /* Prevent pull-to-refresh and overscroll glow on mobile */
+            overscroll-behavior-y: contain;
         }
         .mono {
             font-family: 'JetBrains Mono', monospace;
+        }
+        /* Mobile tap highlight removal */
+        * {
+            -webkit-tap-highlight-color: transparent;
         }
     </style>
 <script type="importmap">
