--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             color: #f8fafc;
-            /* Prevent pull-to-refresh and overscroll glow on mobile */
             overscroll-behavior-y: contain;
         }
         .mono {
             font-family: 'JetBrains Mono', monospace;
         }
-        /* Mobile tap highlight removal */
         * {
             -webkit-tap-highlight-color: transparent;
         }
@@ -30,15 +28,17 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
